静态资源API